<resources>
    <string name="app_name">BaseAndroid</string>
    <string name="fu_bottom_menu_des">底部导航栏的说明</string>
    <string name="fu_home">首页</string>
    <string name="fu_communion">交流</string>
    <string name="fu_news">资讯</string>
    <string name="fu_jy">建议</string>
    <string name="fu_health">健康</string>
    <string name="fu_more">更多</string>

    <!-- SweetAlert -->
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>


    <!-- pulltorefresh -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

</resources>
